# linalg

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/linalg/: decomp.h  gfx.h  linalg.h  matrix.h  vector.h
src/: decomp.c  gfx.c  matrix.c  vector.c
tests/: test_decomp.c  test_gfx.c  test_matrix.c  test_util.h  test_vector.c
